src/app/tasks-manager/tasks-manager.component.css
#taskHeader,
.task-item {
  display: flex;
  justify-content: space-between;
  border-bottom: 1px solid #00000020;
	padding: 0 calc(2 * var(--margin-large));
}

.task-header-item {
	font-size: var(--font-size-medium);
	line-height: var(--line-height-medium);
	margin: var(--margin-small);
	font-weight: 600;
}

.checkbox-column {
	width: calc(var(--margin-large)*2 + var(--margin-small));
}

#stepsDisplayButton {
	margin: 0;
}
#stepsDisplayButton img#displayStepsIcon {
	display: inline;
}
#stepsDisplayButton img#hideStepsIcon {
	display: none;
}

#stepsDisplayButton:active img#displayStepsIcon {
	display: none;
}
#stepsDisplayButton:active img#hideStepsIcon {
	display: inline;
}

.description-column {
	max-width: 12em;
}

td div {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: flex-start;
	gap: var(--margin-small);
}


.steps-column {
	max-width: 16em;
}

.steps-preview-container p {
	height: 100%;
	max-width: 8em;
	margin: 0;

	overflow: hidden;
	text-overflow: ellipsis;
	font-size: var(--font-size-xsmall);

	margin-left: var(-margin-xsmall);
	margin-right: var(--margin-small);

	background-color: rgba(0, 0, 0, 0.03);
}

.steps-preview-container p:nth-child(2n) {
	background-color: rgba(0, 0, 0, 0.05);
}

.table-time-value {
	padding: var(--margin-xsmall) var(--margin-small);
	width: min-content;
	margin: 0;

	background-color: rgba(0, 0, 0, 0.08);
}

input[type="checkbox"] {
	opacity: 0.5
}
input[type="checkbox"]:checked {
	opacity: 1
}

#mandatoryCheckbox:not(:checked) {
	background-color: var(--warning-background-color);
	border-color: var(--faint-warning-background-color);
}
#mandatoryCheckbox:checked {
	background-color: var(--warning-color);
	background-image: url("/assets/exclamation-icon.svg");
	background-size: 90%;
}

.middle-label {
	margin: 0;
	padding: 0;
}

.repeat-column div {
	gap: 0.25em;
}

